--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -596,7 +596,7 @@
 
   "choiceScreenTitle": "Aber wählen Sie zuerst die Option, die am besten zu Ihnen passt",
   "choiceScreenFastAccess": "Schneller Zugang",
-  "choiceScreenFastAccessDesc": "1 Minute, 5 Fragen",
+  "choiceScreenFastAccessDesc": "1 Minute, 6 Fragen",
   "choiceScreenHigherAccuracy": "Höhere Genauigkeit",
   "choiceScreenHigherAccuracyDesc": "3-5 Minuten, 15 Fragen",
 
@@ -747,5 +747,8 @@
   "hardSkillProcessAutomation": "Prozessautomatisierung",
 
   "expandAll": "Alle Erweitern",
-  "collapseAll": "Alle Einklappen"
+  "collapseAll": "Alle Einklappen",
+
+  "creativity": "Kreativität",
+  "mergers_acquisitions": "M&A (Fusionen und Übernahmen)"
 }
