Added new skill filtering options, fixed overflow in job cart and changed duration icons

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -750,5 +750,11 @@
   "collapseAll": "Alle Einklappen",
 
   "creativity": "Kreativität",
-  "mergers_acquisitions": "M&A (Fusionen und Übernahmen)"
+  "mergers_acquisitions": "M&A (Fusionen und Übernahmen)",
+
+  "hardSkills": "Fachkompetenzen",
+  "skillsSelected": "ausgewählt",
+  "noSkillsFound": "Keine Fähigkeiten gefunden",
+  "clearAll": "Alle löschen",
+  "searchSkills": "Fähigkeiten suchen..."
 }
