--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -754,5 +754,30 @@
   "skillsSelected": "seleccionadas",
   "noSkillsFound": "No se encontraron habilidades",
   "clearAll": "Limpiar todo",
-  "searchSkills": "Buscar habilidades..."
+  "searchSkills": "Buscar habilidades...",
+
+  "reportJob": "Reportar trabajo",
+  "@reportJob": {
+    "description": "Title for the report job dialog"
+  },
+  "reportJobConfirmation": "¿Estás seguro de que quieres reportar este trabajo?",
+  "@reportJobConfirmation": {
+    "description": "Confirmation message for reporting a job"
+  },
+  "cancel": "Cancelar",
+  "@cancel": {
+    "description": "Cancel button text"
+  },
+  "report": "Reportar",
+  "@report": {
+    "description": "Report button text"
+  },
+  "reportSuccess": "Trabajo reportado exitosamente",
+  "@reportSuccess": {
+    "description": "Success message when job is reported"
+  },
+  "reportError": "Error al reportar el trabajo",
+  "@reportError": {
+    "description": "Error message when job reporting fails"
+  }
 }
