--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -947,5 +947,30 @@
   "skillsSelected": "selected",
   "noSkillsFound": "No skills found",
   "clearAll": "Clear All",
-  "searchSkills": "Search skills..."
+  "searchSkills": "Search skills...",
+
+  "reportJob": "Report Job",
+  "@reportJob": {
+    "description": "Title for the report job dialog"
+  },
+  "reportJobConfirmation": "Are you sure you want to report this job?",
+  "@reportJobConfirmation": {
+    "description": "Confirmation message for reporting a job"
+  },
+  "cancel": "Cancel",
+  "@cancel": {
+    "description": "Cancel button text"
+  },
+  "report": "Report",
+  "@report": {
+    "description": "Report button text"
+  },
+  "reportSuccess": "Job reported successfully",
+  "@reportSuccess": {
+    "description": "Success message when job is reported"
+  },
+  "reportError": "Failed to report job",
+  "@reportError": {
+    "description": "Error message when job reporting fails"
+  }
 }
